<resources>
    <string name="app_name">APIsExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_items_available">No items available</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="image">Image</string>
    <string name="preview">Preview</string>
    <string name="more_info">More Info</string>
    <string name="add_to_favorites">Add to favourites</string>
    <string name="search_items">Search</string>
</resources>